# poke_ipa

./: .gitignore  hello.py  pyproject.toml
.github/workflows/: ipa-build.yml
app/: pyproject.toml
app/src/: main.py
pokedex/: pyproject.toml
pokedex/Pokedex/: main.py  pokeclient.py  requirements.txt
pokedex/src/: pokeclient.py
src/: main.py
